# espacio-impro

./: .gitignore  AGENT.md  DECISIONS.md  PLAN.md  TASKS.md  claude.md  podman-compose.prod.yml  podman-compose.yml
.github/workflows/: build-and-push.yml  deploy-main.yml  update-deployment.yml
backend/: .env.example  .gitignore  README.md  dockerfile  pyproject.toml
backend/src/: database.py  email_service.py  main.py  managers.py  models.py  schemas.py  security.py
backend/src/email_templates/: contacto_admin.html  contacto_usuario.html
backend/src/routers/: admin.py  public.py  ws.py
frontend/: .dockerignore  Dockerfile  astro.config.mjs  dockerfile  nginx.conf  package-lock.json  package.json
frontend/.github/workflows/: deploy-main.yml  update-deployment.yml
frontend/copilot/: AGENT.md  DECISIONS.md  PLAN.md  TASKS.md  claude.md
frontend/scripts/: optimize-images.mjs
frontend/src/data/: impronakuy-schemas.ts  impronakuy-teams.ts  seo.ts  shows.ts
frontend/src/layouts/: Layout.astro
frontend/src/lib/: dashboard-api.ts
frontend/src/pages/: 404.astro  contactanos.astro  fonts.astro  galeria.astro  index.astro  inicio.astro  nosotros.astro  portafolio.astro
frontend/src/styles/: global.css
impronakuy-backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  requirements.txt
impronakuy-backend/alembic/: env.py
impronakuy-backend/app/: config.py  database.py  deps.py  main.py  scoring.py  security.py  seed.py  teams.py  ws_manager.py
impronakuy-backend/data/: impronakuy.db
impronakuy-backend/scripts/: load_test_vote.py
(+83 files in other folders)
