[project]
name = "backend"
version = "0.1.0"
description = "This is the backend of Espacio Impro"
authors = [
    {name = "Cristian Monzon Guzman",email = "cristian-02-@live.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.127.0,<0.128.0)",
    "uvicorn[standard] (>=0.40.0,<0.41.0)",
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "websockets (>=15.0.1,<16.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
]

[tool.poetry]
packages = [
    { include = "src" }
]

[tool.poetry.scripts]
start = "src.main:start"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
